deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ollama
  name: ollama
  namespace: ollama-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      #nodeSelector:
        #node-role: node2  
      containers:
      - image: ghcr.io/amperecomputingai/ollama-ampere:0.0.6-ol9
        name: ollama
        ports:
        - containerPort: 11434
      - image: curlimages/curl
        name: load-model
        command: ["/bin/sh", "-c"]
        args:
          - "sleep infinity"
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "curl -X POST http://localhost:11434/api/pull -H 'Content-Type: application/json' -d '{\"name\": \"llama3.2\"}'"
                  #resources:
                  #limits:
                  #memory: 50Mi
                  #cpu: 25m
        livenessProbe:
          httpGet:
            path: /
            port: 11434
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 11434
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: 11434
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: open-webui
  name: open-webui
  namespace: ollama-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:  
      #nodeSelector:
        #node-role: node2
      volumes:
      - name: webui-data
        persistentVolumeClaim:
          claimName: ollama-pvc
      containers:
      - image: ghcr.io/open-webui/open-webui:v0.5.4
        name: open-webui
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: webui-data
            mountPath: /app/backend/data
              #resources:
              #requests:
              #cpu: 1000m
              #memory: 128Mi
              #limits: 
              #cpu: 2000m
              #memory: 1Gi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 30
